--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <h4>Population: <span id="population"></span></h4>
             <h4>Capital: <span id="capital"></span></h4>
             <h4>Area: <span id="area"></span></h4>
+            <h4>Languages: <span id="languages"></span></h4>
+            <h4>Currency: <span id="currency"></span></h4>
         </div>
     </div>
 </body>
